sampai notif bobble

--- a/index.html
+++ b/index.html
@@ -25,7 +25,32 @@
     <link rel="stylesheet" href="assets/plugin/PopUp-iOS/css/public.css" /> -->
   </head>
   <body class="bg">
+    <audio
+      id="click-sound"
+      src="assets/audio/effect-button.mp3"
+      preload="auto"
+    ></audio>
     <div class="container-fluid" id="content"></div>
+    <div class="container-fluid" id="content-2">
+      <div class="container border vh-100">
+        <div class="d-flex justify-content-center pt-5">
+          <img
+            src="assets/img/firda.jpg"
+            class="profile-circle slide-down"
+            alt="..."
+          />
+        </div>
+
+        <div id="jam" class="fw-normal text-white text-center display-1"></div>
+        <div id="tanggal" class="fw-bold text-white text-center mb-5"></div>
+        <div class="card shadow-lg rounded-notif">
+          <div class="card-body text-wrap text-break">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Reprehenderit tempore porro mollitia numquam nesciunt blanditiis sit
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
