--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     ></audio>
     <div class="container-fluid" id="content"></div>
     <div class="container-fluid" id="content-2">
-        <div class="container vh-100">
+        <div class="container vh-100 ">
           <div class="d-flex justify-content-center pt-5">
             <img  src="assets/img/firda.jpg"  class="profile-circle slide-down"  alt="..." />
           </div>
@@ -54,14 +54,16 @@
             </h1>
 
             </p>
-            <div class="text-center"><button type="button" id="intipBuka" class="btn btn-outline-light shadow-lg rounded-custom"> Intip Jangan ?&#128140;
+            <div class="text-center"><button type="button" id="intipBuka" data-id="0" class="btn btn-outline-light shadow-lg rounded-custom"> Intip Jangan ?&#128140;
             </button></div>
           </div>
-          <div id="notifikasi">
+          <div id="notifikasi" class="">
             <div class="card shadow-lg rounded-notif" id="notifikasi-box" >
               <div class="card-body text-wrap text-break" id="notifikasi-body"></div>
             </div>
           </div>
+          <div class="text-center my-5" id="btnNext"></div>
+        
       </div>
     </div>
 
@@ -81,6 +83,8 @@
     <!-- <script src="assets/plugin/PopUp-iOS/js/address.js"></script>
     <script src="assets/plugin/PopUp-iOS/js/bscroll.min.js"></script>
     <script src="assets/plugin/PopUp-iOS/js/mobileLayer.js"></script> -->
+
+    <script src="assets/js/function.js"></script>
     <script src="assets/js/script.js"></script>
 
     <script></script>
