--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
       src="assets/audio/effect-notif.mp3"
       preload="auto"
     ></audio>
+    <audio
+    id="click-sound3"
+    src="assets/audio/audio3.mp3"
+    preload="auto"
+  ></audio>
     <div class="container-fluid" id="content"></div>
     <div class="container-fluid" id="content-2">
         <div class="container vh-100 ">
@@ -54,7 +59,7 @@
             </h1>
 
             </p>
-            <div class="text-center"><button type="button" id="intipBuka" data-id="0" class="btn btn-outline-light shadow-lg rounded-custom"> Intip Jangan ?&#128140;
+            <div class="text-center"><button type="button" id="intipBuka" data-id="0" class="btn btn-outline-light shadow-lg rounded-custom">ngintip bayar &#128140;
             </button></div>
           </div>
           <div id="notifikasi" class="">
