--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     <!-- <link rel="stylesheet" href="assets/plugin/PopUp-iOS/css/layer.css" />
     <link rel="stylesheet" href="assets/plugin/PopUp-iOS/css/public.css" /> -->
   </head>
-  <body class="bg">
+  <body class="">
+   
+    <div class="background"></div>
+    <div class="overlay"></div>
     <audio
       id="click-sound"
       src="assets/audio/effect-button.mp3"
